--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "tangying <tangying@ganguo.hk>",
   "license": "MIT",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "test": "vitest"
   },
   "dependencies": {
     "prettier": "^2.7.1",
-    "vite": "^3.0.9"
+    "vite": "^3.0.9",
+    "vitest": "^0.25.5"
   }
 }
