--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
+    "ui": "vitest --ui",
     "test": "vitest"
   },
   "dependencies": {
     "prettier": "^2.7.1",
     "vite": "^3.0.9",
     "vitest": "^0.25.5"
+  },
+  "devDependencies": {
+    "@vitest/ui": "^0.29.1"
   }
 }
