--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2",
     "vite": "^3.0.9",
     "vitest": "^0.25.5"
   },
